JETcompiler/Tests/bad/bad026.myout
Error while processing expression: cannot apply assignment expression - incompatible types "IntegerType" and "FloatType", line 5.
